--- a/style/main.less
+++ b/style/main.less
@@ -24,6 +24,7 @@ h2 {
 }
 #header {
   position: fixed;
+  top: 0;
   background-color: @bl;
   z-index: 10;
   width: 100%;
@@ -50,6 +51,18 @@ h2 {
       margin: 0;
       padding: 0;
     }
+  }
+}
+
+#maincontent {
+  width: 97%;
+  height: 100%;
+  margin: 20px auto;
+  .box_shadow;
+
+  .viewbox {
+    width: 100%;
+    height: 80%;
   }
 }
 
