--- a/style/chooser.less
+++ b/style/chooser.less
@@ -12,11 +12,11 @@
 #ribbonchooser {
   position: fixed;
   z-index: 2;
-  background-color: @cr;
-  padding-top: 32px;
   margin: 0 6px;
   border-radius: 20px;
   .box_shadow;
+  padding-top: 32px;
+  background-color: @wh;
   text-align: center;
   font-size: 22px;
 
