--- a/style/showcase.less
+++ b/style/showcase.less
@@ -1,12 +1,24 @@
 .showcase {
-	width: 100%;
     background-color: rgba(255, 255, 255, 0.12);
-	// temporary
-	height: 400px;
+    padding: 20px;
+    margin-bottom: 40px;
+
+	.caseleft {
+		display: inline;
+
+		.caseart {
+			height: 400px;
+			width: 400px;
+		}
+	}
+
+	.caseright {
+		width: 100%;
+		max-width: 800px;
+	}
 }
 
 .albumgrid {
-	// temporary
 	overflow: hidden;
 	overflow-y: auto;
 	max-height: 600px;
