--- a/style/showcase.less
+++ b/style/showcase.less
@@ -5,10 +5,18 @@
 @wh: #F2F2F2;
 
 .showcase {
-    background-color: rgba(255, 255, 255, 0.12);
-    padding: 20px;
-    margin-bottom: 40px;
-    overflow: hidden;
+  background-color: rgba(255, 255, 255, 0.12);
+  padding: 20px;
+  margin-bottom: 40px;
+  overflow: hidden;
+
+  .albumtitle {
+    margin: 0 auto;
+    text-align: center;
+    font-size: 28px;
+    font-weight: bold;
+    color: @bl;
+  }
 
   .caseleft {
     float: left;
@@ -21,6 +29,7 @@
 
   .caseright {
     height: 400px;
+    min-width: 400px;
     overflow: auto;
     color: @wh;
 
