--- a/style/main.less
+++ b/style/main.less
@@ -1,5 +1,5 @@
 @bl: #3BA7BF;
-@dg: #393939;
+@dg: #343434;
 @lg: #575757;
 @cr: #F2EFC4;
 @wh: #F2F2F2;
@@ -20,7 +20,8 @@ html {
 }
 
 h1 {
-  font-size: 24px;
+  font-family: 'Banana Brick';
+  font-size: 48px;
 }
 
 h2 {
@@ -29,6 +30,7 @@ h2 {
 #header {
   position: fixed;
   top: 0;
+  left: 0;
   background-color: @bl;
   z-index: 10;
   width: 100%;
@@ -62,6 +64,7 @@ h2 {
   width: 97%;
   height: 100%;
   margin: 20px auto;
+  font-family: 'Intuitive';
   .box_shadow;
 
   .viewbox {
