--- a/style/showcase.less
+++ b/style/showcase.less
@@ -17,6 +17,7 @@
     font-weight: bold;
     color: @bl;
     font-family: 'Banana Brick';
+    text-shadow: 0 8px 12px #000;
   }
 
   .caseleft {
@@ -85,9 +86,10 @@
   max-height: 600px;
 
   .albumthumb {
+    background-size: contain;
     float: left;
     width: 150px;
     height: 150px;
-    background-size: contain;
+    box-shadow: 0 0 2px #000
   }
 }
