--- a/style/main.less
+++ b/style/main.less
@@ -45,18 +45,18 @@ h2 {
     height: 50px;
     width: 50px; 
   }
-  
-  .titlecontainer {
-    display: inline;
-    float: left;
-    margin-left: 12px;
-    color: @wh;
-    text-shadow: 1px 1px 0px @lg;
+}
 
-    h1, h2 {
-      margin: 0;
-      padding: 0;
-    }
+.titlecontainer {
+  display: inline;
+  float: left;
+  margin-left: 12px;
+  color: @wh;
+  text-shadow: 1px 1px 6px #000;
+
+  h1, h2 {
+    margin: 0;
+    padding: 0;
   }
 }
 
@@ -64,12 +64,59 @@ h2 {
   width: 97%;
   height: 100%;
   margin: 20px auto;
-  font-family: 'Intuitive';
+  padding-top: 50px;
   .box_shadow;
 
   .viewbox {
   }
 }
 
+.panel {
+  position: absolute;
+  overflow: hidden;
+  background-color: rgba(255, 255, 255, 0.1);
+  top: 100px;
+  left: 60px;
+  width: 90%;
+  height: 80%;
+  color: @wh;
+  font-size: 18px;
+  font-family: 'Intuitive';
+
+  .titlecontainer {
+    float: none;
+   
+    h1 {
+      display: inline;
+      color: @bl;
+    }
+  }
+
+  .close {
+    display: inline;
+    float: right;
+    margin: 10px 15px 0 0;
+  }
+
+  .panelbody {
+    margin: 20px 12px;
+    height: 60%;
+    text-shadow: 1px 1px 0 #000;
+    text-transform: uppercase;
+  }
+
+  #authbutton {
+    background-color: #343434;
+    box-shadow: 3px 3px 0 0 #3BA7BF;
+    color: #F2EFC4;
+    float: right;
+    font-family: 'Banana Brick';
+    font-size: 22px;
+    margin: 20px 40px 0 0;
+    padding: 24px 10px 0 0;
+    text-align: right;
+    width: 270px;
+  }
+}
 
 
