--- a/style/main.less
+++ b/style/main.less
@@ -78,7 +78,6 @@ h2 {
   top: 100px;
   left: 60px;
   width: 90%;
-  height: 80%;
   color: @wh;
   font-size: 18px;
   font-family: 'Intuitive';
@@ -112,7 +111,7 @@ h2 {
     float: right;
     font-family: 'Banana Brick';
     font-size: 22px;
-    margin: 20px 40px 0 0;
+    margin: 40px;
     padding: 24px 10px 0 0;
     text-align: right;
     width: 270px;
