help and bio work

--- a/style/showcase.less
+++ b/style/showcase.less
@@ -97,9 +97,11 @@
 #biopanel {
   position: absolute;
   overflow: hidden;
+  overflow-y: scroll;
   background-color: rgba(0, 0, 0, 0.9);
   top: 100px;
   left: 60px;
+  max-height: 60%;
   width: 90%;
   color: @wh;
   font-size: 18px;
