--- a/style/main.less
+++ b/style/main.less
@@ -13,6 +13,7 @@ html {
   background-color: @wh;
   background-image: url('/img/blackorchid.png');
   color: @dg;
+  font-family: 'Trebuchet MS';
 }
 
 .button {
@@ -61,7 +62,6 @@ h2 {
 }
 
 #maincontent {
-  width: 97%;
   height: 100%;
   margin: 20px auto;
   padding-top: 50px;
@@ -118,4 +118,16 @@ h2 {
   }
 }
 
+#help {
+  position: fixed;
+  bottom: 40px;
+  right: 0;
+  max-width: 500px;
+  background-color: @bl;
+  text-align: center;
+
+  p {
+    margin-right: 10px; 
+  }
+}
 
