readme and style

--- a/style/chooser.less
+++ b/style/chooser.less
@@ -28,7 +28,7 @@
 
   .button {
     font-size: 16px;
-    padding: 0 10px;
+    padding: 1px 50px;
     margin: 3px auto;
     text-align: center;
     cursor: pointer;
