--- a/style/showcase.less
+++ b/style/showcase.less
@@ -52,6 +52,11 @@
         font-size: 11px;
       }
     }
+
+    .playing {
+      font-style: italic;
+      color: @bl;
+    }
   }
 
   .casecommands {
