Added path and jQueryUI

--- a/style/showcase.less
+++ b/style/showcase.less
@@ -24,6 +24,7 @@
     float: left;
 
     .caseart {
+      background-size: contain;
       height: 500px;
       width: 500px;
     }
@@ -132,4 +133,8 @@
     text-shadow: 1px 1px 0 #000;
     text-transform: uppercase;
   }
+}
+
+.ui-effects-transfer {
+  background-color: #fff;
 }
