Small mode for showcase (default now)

--- a/style/showcase.less
+++ b/style/showcase.less
@@ -80,6 +80,40 @@
   }
 }
 
+.small.showcase {
+  .albumtitle {
+    margin-bottom: 10px;
+    text-align: center;
+    font-size: 24px;
+  }
+
+  .caseright {
+    display: inline-block;
+  }
+
+  .caseart {
+    height: 250px;
+    width: 250px;
+  }
+
+  .caseright {
+    display: inline-block;
+    height: 250px;
+    width: 65%;
+    overflow: auto;
+    color: @wh;
+    font-size: 11px;
+  }
+
+  .casecommands {
+    float: right;
+  }
+
+  .rdioaction {
+    float: none;
+  }
+}
+
 .listtitle{
     text-align: center;
     font-family: 'Banana Brick';
