--- a/style/main.less
+++ b/style/main.less
@@ -78,6 +78,7 @@ h2 {
   top: 100px;
   left: 60px;
   width: 90%;
+  max-height: 80%;
   color: @wh;
   font-size: 18px;
   font-family: 'Intuitive';
@@ -120,6 +121,7 @@ h2 {
 
 #help {
   position: fixed;
+  z-index: 2;
   bottom: 40px;
   right: 0;
   max-width: 500px;
