--- a/style/showcase.less
+++ b/style/showcase.less
@@ -6,6 +6,7 @@
 
 .showcase {
   background-color: rgba(0, 0, 0, 0.75);
+  z-index: 1;
 
   .albumtitle {
     margin-bottom: 20px;
@@ -66,6 +67,7 @@
       float: right;
       height: 24px;
       margin-right: 10px;
+      margin-bottom: 20px;
       padding: 40px 10px 0 0;
       text-align: right;
       font-family: 'Banana Brick';
@@ -131,6 +133,7 @@
 
 #biopanel {
   position: absolute;
+  z-index: 2;
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0.9);
   top: 100px;
