Getting ready for user panel

--- a/style/chooser.less
+++ b/style/chooser.less
@@ -38,6 +38,10 @@
     color: @wh;
     background-color: @lg;
     box-shadow: 0px 1px 2px 0 #777;
+
+    .button {
+      display: inline-block;
+    }
   }
 
   .ribbontoggle {
