--- a/style/showcase.less
+++ b/style/showcase.less
@@ -135,10 +135,11 @@
   position: absolute;
   z-index: 2;
   overflow: hidden;
+  overflow-y: scroll; 
   background-color: rgba(0, 0, 0, 0.9);
   top: 100px;
   left: 60px;
-  max-height: 60%;
+  max-height: 800px;
   width: 90%;
   color: @wh;
   font-size: 18px;
