--- a/style/showcase.less
+++ b/style/showcase.less
@@ -131,6 +131,22 @@
   }
 }
 
+.artistpanel {
+  .artistgrid {
+      overflow: hidden;
+      overflow-y: auto;
+      max-height: 600px;
+      
+      .artistthumb {
+        background-size: contain;
+        float: left;
+        width: 150px;
+        height: 150px;
+        box-shadow: 0 0 2px #000
+      }
+  }
+}
+
 #biopanel {
   position: absolute;
   z-index: 2;
